--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,11 @@
     <string name="button1">Mentest</string>
     <string name="button2">Newsletter</string>
     <string name="your_web_client_id">903027854816-jnj5q9mq6ih6ofhkap6sftaasn2fksrm.apps.googleusercontent.com</string>
+    <string name="label">Cancer</string>
+    <string name="articles">Articles</string>
+    <string name="titles">Tesla-Tata Electronics discreet pact boosts India\'s semiconductor ambitions as EV giant eyes local production: Report</string>
+    <string name="description">TheTesla-Tata deal, executed discreetly a few months ago, positions Tata Electronics as a reliable supplier for top-tier international clients seeking to establish a crucial component of their semiconductor value chain within India, as per an ET report.</string>
+    <string name="news_image">Image News</string>
+    <string name="tittle">News Tittle</string>
+    <string name="news_description">News Description</string>
 </resources>
